gcc/testsuite/rust/rustc/ui/feature-gate/rustc-private.rs
// gate-test-rustc_private

extern crate libc; // { dg-error ".E0658." "" { target *-*-* } }

fn main() {}

